# scout

./: .gitignore  Cargo.toml  README.ja.md  README.md
.analysis/: architecture.md  architecture.yaml
.github/workflows/: ci.yml  release.yml
src/: main.rs  markdown.rs  redacted.rs  retry.rs  tools.rs
src/fetch/: converter.rs  extractor.rs  mod.rs  ssrf.rs
src/gemini/: client.rs  grounding.rs  mod.rs  types.rs
src/github/: format.rs  helpers.rs  mod.rs  types.rs
src/search/: bilingual.rs  engine.rs  lang.rs  mod.rs
src/slack/: mod.rs
src/tools/: errors.rs  mod.rs  params.rs
