[package]
name = "scout"
version = "0.1.2"
edition = "2024"
description = "MCP server for web search (Gemini Grounding) and page fetching"
license = "MIT"
repository = "https://github.com/thkt/scout"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
dom_smoothie = "0.15"
fast_html2md = "0.0.58"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
futures = "0.3"
schemars = "1"
base64 = "0.22"
globset = "0.4"
percent-encoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
encoding_rs = "0.8"
fastrand = "2"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
